# langgraph-harness-workshop

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  nbstrip.yml
data/: sales.csv
docs/: instructor-notes.md  lecture.md
notebooks/: langgraph-workshop.ipynb  workshop.ipynb
notebooks/data/: sales.csv
notebooks/solutions/: langgraph-workshop-solutions.ipynb
scripts/: build_notebook.py  generate_sales_csv.py
src/langgraph_harness_workshop/: __init__.py  eval_runner.py  helpers.py
src/pandas_pilot/: __init__.py  eval.py  graph.py  tools.py  trace.py
tests/: test_eval_runner.py  test_helpers.py  test_smoke.py
