[project]
name = "langgraph-harness-workshop"
version = "0.1.0"
description = "兩小時 LangGraph + harness engineering 工作坊教材 (NTU AI Club)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NTU AI Club" }]
dependencies = [
    "langgraph>=1.1",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pandas>=2.2",
    "typing-extensions>=4.12",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbqa>=1.9",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_harness_workshop"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/**/*.ipynb"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "PIE",
    "RET",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-missing-import = "warn"
unused-ignore-comment = "warn"

[tool.nbqa.addopts]
# Notebook cells often re-import for pedagogical clarity; relax rules that
# only make sense for single-file modules.
ruff = [
    "--extend-ignore=E402,F811,F821,F401,I001,B007,B018,SIM117,UP035",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
