[project]
name = "pandas-pilot"
version = "0.1.0"
description = "LangGraph 工作坊配套:會分析 CSV 的 ReAct agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-google-genai>=2.0",
    "pandas>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "ty",
    "pytest>=8.0",
    "jupyter>=1.0",
    "nbformat>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pandas_pilot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
# ty 是 Astral 新的 type checker,目前仍在 preview/alpha
# 設定欄位保留,待官方 schema 穩定後再補上
